update to config

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@ title: 'This is my Site Title'
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Page Note Found</title>
+  <title>Page Not Found</title>
   <meta charset='UTF-8'/>
   <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
   <link rel='shortcut icon' href='{{site.baseurl}}/img/favicon.ico' type='image/x-icon' />
