--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,9 +23,8 @@ title: 'This is my Site Title'
  -->
 <div id="introduction">
   <div class="outer_container">
-   <h1>Page Not Found</h1>
-   <p><a href="http://cio.gov">Return to CIO.gov</a>.</p>
-   <p>8/6/2014 4:32</p>
+    {% capture notfound %}{% include notfound.md %}{% endcapture %}
+    {{ notfound | markdownify }}
   </div>
 </div>
 <script src='{{site.baseurl}}/assets/site.js'></script>
