--- a/assets/sass/styles.css.scss
+++ b/assets/sass/styles.css.scss
@@ -12,36 +12,10 @@ $background_white:    #EAE4D2;
 $serif:               'Merriweather', serif;
 $sans-serif:          'Open Sans', sans-serif;
 
-/*  Reset ♥
-    http://meyerweb.com/eric/tools/css/reset/
-    v2.0 | 20110126
-    License: none (public domain)
-------------------------------------------------------- */
-
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-  margin:0;
-  padding:0;
-  border:0;
-  font-size:100%;
-  font:inherit;
-  vertical-align:baseline;
-  }
-
 body {
   background: $background_white;
   font-family: $serif;
+  margin: 0;
 }
 
 a {
@@ -67,6 +41,7 @@ h1 {
   border-bottom: 1px solid $white;
   padding-bottom: 0.25em;
   margin-bottom: 20px;
+  line-height: 65px;
 }
 
 h2 {
@@ -104,9 +79,12 @@ h5 {
   color: $white;
 
   p {
-    @include span-columns(7);
+    @include span-columns(8);
     font-family: $sans-serif;
-    font-size: 18px;
+    font-size: 20px;
+    line-height: 38px;
+    margin-top: 19px;
+    font-weight: lighter;
   }
 }
 
@@ -115,12 +93,13 @@ h5 {
   color: $black;
   h3 { 
     color: $white;
-    font-size: 22px;
+    font-size: 26px;
+    font-weight: lighter;
   }
   
   ol li {
-    color: $white;
-    font-size: 22px;
+    color: #333;
+    font-size: 23px;
     font-weight: 400;
   }
   a {
@@ -134,6 +113,9 @@ h5 {
   }
   h4 {
     margin-top: 1em;
+  }
+  h5 {
+    font-size: 14px;
   }
   p, ol, ul {
     @include span-columns(8);
