--- a/assets/sass/styles.css.scss
+++ b/assets/sass/styles.css.scss
@@ -22,6 +22,7 @@ a {
   color: inherit;
   font-family: inherit;
   font-weight: inherit;
+  text-decoration: none;
 }
 a:hover {
   text-decoration: underline;
