testing about page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,6 +21,8 @@ title: 'This is my Site Title'
   </div>
 </div>
  -->
+{{content}}
+
 <div id="introduction">
   <div class="outer_container">
     {% capture notfound %}{% include notfound.md %}{% endcapture %}
