--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@ title: 'This is my Site Title'
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Digital Services Playbook</title>
+  <title>The U.S. Digital Services Playbook {% if page.url != '/index.html' %}| {{page.title}}{% endif %}</title>
   <meta charset='UTF-8'/>
   <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
   <link rel='shortcut icon' href='{{site.baseurl}}/img/favicon.ico' type='image/x-icon' />
@@ -15,7 +15,20 @@ title: 'This is my Site Title'
 
 <body>
 
+<!-- <div id="navigation_bar">
+  <div class="outer_container">
+    This is a navigation.    
+  </div>
+</div>
+ -->
 <div id="introduction">
+  <div class="outer_container">
+    {% capture introduction %}{% include introduction.md %}{% endcapture %}
+    {{ introduction | markdownify }}
+  </div>
+</div>
+
+<div id="plays_index">
   <div class="outer_container">
     <h3>DIGITAL SERVICE PLAYS</h3>
     <div class="columns">
@@ -51,5 +64,21 @@ title: 'This is my Site Title'
     {{ play1 | markdownify }}
   </div>
 </div>
-<script src='{{site.baseurl}}/assets/site.js'></script>
+  <!-- 
+  <div class='container'>
+    <div class='col12 clearfix'>
+      <div class='header col6 margin3 pad4h'>
+        <div class='clearfix col12'>
+          <div class='menu fr'>
+            <a class='{% if page.section == "blog" %}active{% endif %}' href='{{site.baseurl}}/'>Blog</a>
+            <a class='{% if page.url == "about/" %}active{% endif %}' href='{{site.baseurl}}/about'>About</a>
+            <a href='//github.com/prose/starter'>Fork on GitHub</a>
+          </div>
+          <h1 class='title'><a href='{{site.baseurl}}/'>{{page.title}}</a></h1>
+        </div>
+      </div>
+    </div>
+    {{content}}
+  </div> -->
+  <script src='{{site.baseurl}}/assets/site.js'></script>
 </body>
