--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,6 @@ title: 'This is my Site Title'
   <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
   <link rel='shortcut icon' href='{{site.baseurl}}/img/favicon.ico' type='image/x-icon' />
   <link href='http://fonts.googleapis.com/css?family=Merriweather:400,300,700|Open+Sans:300,400' rel='stylesheet' type='text/css'>
-  <!-- <link href='{{site.baseurl}}/assets/reset.css' rel='stylesheet' /> -->
   <link href='{{site.baseurl}}/assets/css/styles.css' rel='stylesheet' />
 </head>
 
@@ -23,46 +22,78 @@ title: 'This is my Site Title'
  -->
 <div id="introduction">
   <div class="outer_container">
-    {% capture introduction %}{% include introduction.md %}{% endcapture %}
-    {{ introduction | markdownify }}
+    <div class="inner_container">
+      {% capture introduction %}{% include introduction.md %}{% endcapture %}
+      {{ introduction | markdownify }}
+    </div>
   </div>
 </div>
 
 <div id="plays_index">
   <div class="outer_container">
-    <h3>DIGITAL SERVICE PLAYS</h3>
-    <div class="columns">
-      {% capture plays_index %}{% include plays_index.md %}{% endcapture %}
-      {{ plays_index | markdownify }}
+    <div class="inner_container">
+      <h3>DIGITAL SERVICE PLAYS</h3>
+      <div class="columns">
+        {% capture plays_index %}{% include plays_index.md %}{% endcapture %}
+        {{ plays_index | markdownify }}
+      </div>
     </div>
   </div>
 </div>
 
-<div id="plays">
-  <div class="outer_container" id="play1">
+<div id="plays" class="outer_container">
+  <div class="inner_container" id="play1">
     {% capture play1 %}{% include play1.md %}{% endcapture %}
     {{ play1 | markdownify }}
   </div>
-  <div class="outer_container" id="play2">
-    {% capture play1 %}{% include play1.md %}{% endcapture %}
-    {{ play1 | markdownify }}
+  <div class="inner_container" id="play2">
+    {% capture play2 %}{% include play2.md %}{% endcapture %}
+    {{ play2 | markdownify }}
   </div>
-  <div class="outer_container" id="play3">
-    {% capture play1 %}{% include play1.md %}{% endcapture %}
-    {{ play1 | markdownify }}
+  <div class="inner_container" id="play3">
+    {% capture play3 %}{% include play3.md %}{% endcapture %}
+    {{ play3 | markdownify }}
   </div>
-  <div class="outer_container" id="play4">
+  <div class="inner_container" id="play4">
     {% capture play4 %}{% include play4.md %}{% endcapture %}
     {{ play4 | markdownify }}
   </div>
-  <div class="outer_container" id="play5">
-    {% capture play1 %}{% include play1.md %}{% endcapture %}
-    {{ play1 | markdownify }}
+  <div class="inner_container" id="play5">
+    {% capture play5 %}{% include play5.md %}{% endcapture %}
+    {{ play5 | markdownify }}
   </div>
-  <div class="outer_container" id="play6">
-    {% capture play1 %}{% include play1.md %}{% endcapture %}
-    {{ play1 | markdownify }}
+  <div class="inner_container" id="play6">
+    {% capture play6 %}{% include play6.md %}{% endcapture %}
+    {{ play6 | markdownify }}
   </div>
+  <div class="inner_container" id="play7">
+    {% capture play7 %}{% include play7.md %}{% endcapture %}
+    {{ play7 | markdownify }}
+  </div>
+  <div class="inner_container" id="play8">
+    {% capture play8 %}{% include play8.md %}{% endcapture %}
+    {{ play8 | markdownify }}
+  </div>
+  <div class="inner_container" id="play9">
+    {% capture play9 %}{% include play9.md %}{% endcapture %}
+    {{ play9 | markdownify }}
+  </div>
+  <div class="inner_container" id="play10">
+    {% capture play10 %}{% include play10.md %}{% endcapture %}
+    {{ play10 | markdownify }}
+  </div>
+  <div class="inner_container" id="play11">
+    {% capture play11 %}{% include play11.md %}{% endcapture %}
+    {{ play11 | markdownify }}
+  </div>
+  <div class="inner_container" id="play12">
+    {% capture play12 %}{% include play12.md %}{% endcapture %}
+    {{ play12 | markdownify }}
+  </div>
+  <div class="inner_container" id="play13">
+    {% capture play13 %}{% include play13.md %}{% endcapture %}
+    {{ play13 | markdownify }}
+  </div>  
 </div>
   <!-- 
   <div class='container'>
