got navigation bar working, in early form

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -142,8 +142,7 @@ plays:
                         12: 'play13'
                       },
                       itemClass: 'play_square',
-                      itemHover: 'active_play',
-                      topMargin: 'auto'
+                      itemHover: 'active_play'
                     });
       });
     });
