--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -15,6 +15,12 @@ a {
   font-weight: inherit;
   text-decoration: none; }
 
+a.anchor_offset {
+  display: block;
+  position: relative;
+  top: -60px;
+  visibility: hidden; }
+
 a:hover {
   text-decoration: underline; }
 
