--- a/assets/sass/styles.css.scss
+++ b/assets/sass/styles.css.scss
@@ -25,6 +25,14 @@ a {
   font-weight: inherit;
   text-decoration: none;
 }
+
+a.anchor_offset {
+  display: block;
+  position: relative;
+  top: -60px;
+  visibility: hidden;
+}
+
 a:hover {
   text-decoration: underline;
 }
